Sealed types fixes for JDK-15 and other miscellaneous sealed types changes
Reviewed-by: vromero